estilos asignados y programa funcionando

--- a/presupuestador/src/App.css
+++ b/presupuestador/src/App.css
@@ -127,6 +127,11 @@
   color: white;
  }
 
+
+ .elegir-fecha {
+  height: 350px;
+ }
+
  @media (max-width: 576px) {
   .precio-total {
     position: initial !important;
